--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   /* width: 150px; */
   font-size: 1.25rem;
-  background-color: aqua;
+  background-color: rgba(0, 255, 255, 0.801);
   border-radius: 15px;
   text-decoration: none;
   color: black;
@@ -20,6 +20,6 @@
     font-size: 1.2rem;
     display: flex;
     justify-content: space-evenly;
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.589);
     border-radius: 0px 0px 15px 15px;
 }
