--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -1,5 +1,16 @@
+.container {
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-image: url('../LandingPage/Landing\ img.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .detail {
-    width: 300px;
+    width: 320px;
     margin: auto;
     margin-top: 20px;
     text-align: center;
@@ -9,16 +20,20 @@
     color: black;
     transition: transform .3s;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    vertical-align:middle;
 }
 
 .main {
     border-radius: 15px 15px 0px 0px;
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0.829);
 }
 
 .main h1 {
     margin-top: 10px;
     margin-bottom: 5px;
+    font-family: 'Pokemon hollow';
+    font-size: 3rem;
+    color: #023E8A;
 }
 
 .main h4 {
@@ -40,7 +55,7 @@
 
 
 .typeTitle {
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.794);
 }
 .typeTitle h3 {
     margin-top: 0px;
@@ -58,7 +73,7 @@
 }
 
 .statisticsTitle {
-    background-color: rgba(199, 199, 177, 0.705);
+    background-color: rgba(199, 199, 177, 0.794);
     margin-top: 0px;
 }
 .statisticsTitle h3 {
@@ -79,7 +94,7 @@
 }
 
 .bodyTitle {
-    background-color: beige;
+    background-color: rgba(245, 245, 220, 0.794);
     border-radius: 0px 0px 15px 15px;
 }
 .bodyTitle h3 {
@@ -114,8 +129,10 @@
     margin: auto;
     margin-top: 20px;
     transform: scale(1.1);
+    transition: transform .3s;
 }
 .button:hover {
-    background-color: #023b86d7;
-
+    background-color: rgba(22, 72, 136, 0.843);
+    transform: scale(1.3);
+    transition: transform .3s;
 }
