--- a/client/src/components/Pages/Pages.module.css
+++ b/client/src/components/Pages/Pages.module.css
@@ -20,9 +20,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: transform .3s;
 }
 
 .li:hover {
     background-color: #023b86a2;
-    outline-offset: 1.5rem;
+    /* outline-offset: 1.5rem; */
+    transform: scale(1.1);
+    transition: transform .3s;
 }
