--- a/client/src/components/SearchBar/SearchBar.module.css
+++ b/client/src/components/SearchBar/SearchBar.module.css
@@ -12,11 +12,12 @@
 }
 
 .input {
-    width: 220px;
+    width: 130px;
     height: 28px;
-    border-radius: 10px;
+    border-radius: 8px;
     border: none;
     padding-left: 10px;
+    padding-right: 80px;
     font-size: 1rem;
 
 }
@@ -32,7 +33,7 @@
     font-weight: bold;
     background-color: #023E8A;
     border: none;
-    border-radius: 10px;
+    border-radius: 7px;
     position: absolute;
     right: 1px;
     top: 1px;
