--- a/client/src/components/LandingPage/LandingPage.module.css
+++ b/client/src/components/LandingPage/LandingPage.module.css
@@ -9,7 +9,7 @@
     background-repeat: no-repeat;
     background-position: center;
     font-family: 'Pokemon solid', sans-serif;
-    color: yellow;
+    color: rgb(224, 224, 0);
     font-size: 2.3rem;
     text-shadow: 3px 0px 15px blue;
 }
