--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -1,23 +1,24 @@
 .card {
   /* width: 150px; */
-  font-size: 1.25rem;
+  font-size: 1.3rem;
   background-color: rgba(0, 255, 255, 0.801);
   border-radius: 15px;
   text-decoration: none;
   color: black;
   transition: transform .3s;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  transform: scale(.9);
 }
 
 .card:hover {
-    transform: scale(1.1);
+    transform: scale(1);
     transition: transform .3s;
     z-index: 0;
     overflow: hidden;
 }
 
 .types {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     display: flex;
     justify-content: space-evenly;
     background-color: rgba(245, 245, 220, 0.589);
