--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -62,6 +62,7 @@
     margin-bottom: 0px;
     padding-top: 10px;
     padding-bottom: 0px;
+    /* background-color: rgba(245, 245, 220, 0.883); */
 }
 
 .types {
