--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,25 @@
+/* @import url('http://fonts.cdnfonts.com/css/pok')
+
+body, html {
+  font-family: 'Pokemon Solid', sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+} */
+
+@font-face {
+  font-family: 'Pokemon Solid';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Pokemon Solid'), url('https://fonts.cdnfonts.com/s/1219/Pokemon Solid.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Pokemon Hollow';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Pokemon Hollow'), url('https://fonts.cdnfonts.com/s/1219/Pokemon Hollow.woff') format('woff');
+}
+
 .App {
   text-align: center;
 }
